<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Secundaria" >

    <Button
        android:id="@+id/bt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Seleccion"
        android:text="@string/bt1" />

    <Button
        android:id="@+id/bt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Seleccion"
        android:text="@string/bt2" />

    <Button
        android:id="@+id/bt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Seleccion"
        android:text="@string/bt3" />

    <Button
        android:id="@+id/bt4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Seleccion"
        android:text="@string/bt4" />

    <Button
        android:id="@+id/bt9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Seleccion"
        android:text="@string/bt9" />

    <Button
        android:id="@+id/bt10"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:onClick="Seleccion"
        android:text="@string/bt10" />

    <Button
        android:id="@+id/bt11"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:onClick="Seleccion"
        android:text="@string/bt11" />

    <Button
        android:id="@+id/bt12"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:onClick="Seleccion"
        android:text="@string/bt12" />

    <Button
        android:id="@+id/bt13"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:onClick="Cancelar"
        android:text="@string/bt13" />

</LinearLayout>
