<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Terciaria" >

    <Button
        android:id="@+id/bt5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Seleccion"
        android:text="@string/bt5" />

    <Button
        android:id="@+id/bt6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Seleccion"
        android:text="@string/bt6" />

    <Button
        android:id="@+id/bt7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Seleccion"
        android:text="@string/bt7" />

    <Button
        android:id="@+id/bt8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Seleccion"
        android:text="@string/bt8" />

    <Button
        android:id="@+id/bt14"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:onClick="Seleccion"
        android:text="@string/bt14" />

    <Button
        android:id="@+id/bt15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Seleccion"
        android:text="@string/bt15" />

    <Button
        android:id="@+id/bt16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Seleccion"
        android:text="@string/bt16" />

    <Button
        android:id="@+id/bt17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Seleccion"
        android:text="@string/bt17" />

    <Button
        android:id="@+id/bt18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Cancelar"
        android:text="@string/bt18" />

</LinearLayout>
